[package]
name = "melt"
version = "2.1.5"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2024"
repository = "https://github.com/fenhl/melt"

[profile.release]
codegen-units = 1
lto = true
strip = true

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
is-terminal = "0.4"
chrono-tz = "0.10"
itertools = "0.14"
thiserror = "2"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main", default-features = false }
